[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rst_to_myst"

[project]
name = "rst-to-myst"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
keywords = ["restructuredtext","markdown", "myst"]

requires-python=">=3.7"
dependencies=[
    "docutils>=0.17,<0.20",
    "importlib_resources~=3.1;python_version<'3.9'",
    "pyyaml",
    "markdown-it-py~=2.0",
    "mdformat~=0.7.16",
    "mdformat-myst~=0.1.5",
    "mdformat-deflist~=0.1.2",
    "click>=7.1,<9"
]

[project.urls]
Home = "https://github.com/executablebooks/rst-to-myst"
Documentation = "https://rst-to-myst.readthedocs.io"

[project.scripts]
rst2myst = "rst_to_myst.cli:main"

[project.optional-dependencies]
sphinx = ["sphinx>=5,<7"]
test = [
    "pytest~=6.0",
    "coverage",
    "pytest-cov",
    "pytest-regressions",
    "pytest-param-files",
]
docs = [
    "myst-parser",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-design"
]

[tool.flit.sdist]
exclude = [".github/", "tests/"]

[tool.isort]
profile = "black"
known_first_party = ["rst_to_myst", "tests"]
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]
