[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rst_to_myst"

[project]
name = "rst-to-myst"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
keywords = ["restructuredtext","markdown", "myst"]

requires-python=">=3.9"
dependencies=[
    "docutils>=0.17,<0.22",
    "pyyaml",
    "markdown-it-py~=2.0",
    "mdformat~=0.7.16",
    "mdformat-myst~=0.1.5",
    "mdformat-deflist~=0.1.2",
    "click>=7.1,<9"
]

[project.urls]
Home = "https://github.com/executablebooks/rst-to-myst"
Documentation = "https://rst-to-myst.readthedocs.io"

[project.scripts]
rst2myst = "rst_to_myst.cli:main"

[project.optional-dependencies]
sphinx = ["sphinx>=5,<8"]
test = [
    "pytest~=8.3",
    "coverage",
    "pytest-cov",
    "pytest-regressions",
    "pytest-param-files",
]
docs = [
    "myst-parser",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-design"
]

[tool.flit.sdist]
exclude = [".github/", "tests/"]

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "FURB", # refurb (modernising code)
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "N",    # pep8-naming
  "PERF", # perflint (performance anti-patterns)
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PTH",  # flake8-use-pathlib
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "SLF",  # private member access
  "UP",   # pyupgrade
  "T20",  # flake8-print
]
extend-ignore = [
  "ISC001", # implicit-str-concat
  "N802", # lower-case function name
  "PLR0911",  # too many return statements
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
  "PLR2004",  # magic value
  "RUF012", # typing.ClassVar
  "SLF001", # Private member accessed
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
force-sort-within-sections = true
